# polars-ta

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: AUDNZD1.csv
src/: lib.rs
src/overlap/: dema.rs  ema.rs  mod.rs
src/utils/: core.rs  data_loader.rs  datetime_utils.rs  error.rs  math.rs  mod.rs
src/volatility/: mod.rs  true_range.rs
